--- a/treadnauts default single player.ini
+++ b/treadnauts default single player.ini
@@ -7,7 +7,7 @@
 0_layout_type=2
 # Amount of Key rows
 0_key_rows=6
-# Amount of Key Coloumns
+# Amount of Key Columns
 0_key_cols=14
 # Global Key size of a key
 0_key_abs_w=130
@@ -27,7 +27,7 @@
 # Get them here (Search for "VC_" and then the key name):
 # https://github.com/univrsal/input-overlay/blob/master/libuiohook/include/uiohook.h#L137
 #
-# The Texture needs to contain the buttons in that oder going from left to right
+# The Texture needs to contain the buttons in that order going from left to right
 # With the top row containing the texture for unpressed buttons and the bottom
 # row for pressed buttons. The plugin calculates a 3px gap between all textures
 # and 1 px border around the entire texture
@@ -38,11 +38,11 @@
 #
 # Width & Height of the buttons in the order specified above
 # These values are multipliers
-# Meaning '1' resultes in a width/height that is specified in key_w/key_h
+# Meaning '1' results in a width/height that is specified in key_w/key_h
 # '2' results in key_w/key_h * 2
 1_key_width=1,1,1,1,1,1,1,1,1,1
 1_key_height=1,1,1,1,1,1,1,1,1,1
-# Coloumn = X, Row = Y postion of the buttons in the order specified above
+# Column = X, Row = Y position of the buttons in the order specified above
 # Once again not absolute numbers but rather multipliers
 # E.g. key_row=3 means that the y position is 3 times the button height plus the space between each button
 1_key_row=0,0,0,0,1,1,1,1,1
